@@ -17,7 +17,7 @@ function Test-PathIsJunction
     Tests if a path is a junction.
     
     .DESCRIPTION
-    The `Test-PathIsJunction` function tests if path is a junction (i.e. reparse point). If `Path` or `LiteralPath` doesn't exist, returns `$false`.
+    The `Test-PathIsJunction` function tests if path is a junction (i.e. reparse point). If the path doesn't exist, returns `$false`.
     
     Carbon adds an `IsJunction` extension method on `DirectoryInfo` objects, which you can use instead e.g.
     
@@ -25,6 +25,8 @@ function Test-PathIsJunction
             Where-Object { $_.PsIsContainer -and $_.IsJunction }
 
     would return all the junctions under the current user's temporary directory.
+
+    The `LiteralPath` parameter was added in Carbon 2.2.0. Use it to check paths that contain wildcard characters.
     
     .EXAMPLE
     Test-PathIsJunction -Path C:\I\Am\A\Junction
@@ -50,12 +52,14 @@ function Test-PathIsJunction
     param(
         [Parameter(Mandatory=$true,ParameterSetName='Path',Position=0)]
         [string]
-        # The path to check. Wildcards allowed.
+        # The path to check. Wildcards allowed. If using wildcards, returns `$true` if all paths that match the wildcard are junctions. Otherwise, return `$false`.
         $Path,
 
         [Parameter(Mandatory=$true,ParameterSetName='LiteralPath')]
         [string]
-        # The literal path to check. Wildcards not supported.
+        # The literal path to check. Use this parameter to test a path that contains wildcard characters.
+        #
+        # This parameter was added in Carbon 2.2.0.
         $LiteralPath
     )
     
@@ -63,20 +67,24 @@ function Test-PathIsJunction
 
     Use-CallerPreference -Cmdlet $PSCmdlet -Session $ExecutionContext.SessionState
 
-    $pathParam = @{}
     if( $PSCmdlet.ParameterSetName -eq 'Path' )
     {
-        $pathParam['Path'] = $Path
-    }
-    else
-    {
-        $pathParam['LiteralPath'] = $LiteralPath
+        if( [Management.Automation.WildcardPattern]::ContainsWildcardCharacters($Path) )
+        {
+            $junctions = Get-Item -Path $Path -Force |
+                            Where-Object { $_.PsIsContainer -and $_.IsJunction }
+            
+            return ($junctions -ne $null)        
+        }
+
+        return Test-PathIsJunction -LiteralPath $Path
     }
 
-    if( Test-Path @pathParam -PathType Container )
+    if( Test-Path -LiteralPath $LiteralPath -PathType Container )
     {
-        return (Get-Item @pathParam -Force).IsJunction
+        return (Get-Item -LiteralPath $LiteralPath -Force).IsJunction
     }
+
     return $false
 }
 
